--- a/pages/etudiant/profil.html
+++ b/pages/etudiant/profil.html
@@ -180,7 +180,7 @@
                                     <code
                                         class="text-2xl font-mono font-bold text-purple-900 tracking-wider">STU-8842-XY</code>
                                 </div>
-                                <button onclick="copyCode()"
+                                <button
                                     class="p-2 hover:bg-purple-50 rounded-lg text-purple-600 transition-colors"
                                     title="Copier">
                                     <i data-lucide="copy" class="w-5 h-5"></i>
@@ -334,14 +334,10 @@
                 }
             });
         }
-
-        function copyCode() {
-            // Mock copy
-            alert('Code copié !');
-        }
     </script>
     <!-- Dynamic System Scripts -->
     <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/pages/student-profile.js"></script>
 </body>
 
 </html>
