--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="flex items-center gap-4">
                 <a href="pages/login-choix.html"
                     class="hidden md:block text-base font-bold text-gray-600 hover:text-indigo-600 px-4 py-2">Connexion</a>
-                <a href="pages/entreprise/inscription.html"
+                <a href="pages/inscription-choix.html"
                     class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full font-bold shadow-xl shadow-indigo-200 transition-all hover:scale-105 hover:shadow-indigo-300 transform active:scale-95">
                     Inscription
                 </a>
@@ -202,7 +202,7 @@
         <div id="roles"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-7xl mx-auto fade-in scroll-mt-32"
             style="animation-delay: 0.3s">
-            <a href="pages/login-formateur.html"
+            <div
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-indigo-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-indigo-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -214,12 +214,23 @@
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-3 group-hover:text-indigo-600 transition-colors">
                         Formateur</h3>
-                    <p class="text-gray-500 font-medium leading-relaxed">Créez des cours, animez des sessions live et
+                    <p class="text-gray-500 font-medium leading-relaxed mb-6">Créez des cours, animez des sessions live
+                        et
                         monétisez votre expertise.</p>
+                    <div class="flex gap-3">
+                        <a href="pages/login-formateur.html"
+                            class="flex-1 px-4 py-2.5 bg-indigo-600 hover:bg-indigo-700 text-white rounded-xl font-bold text-sm text-center transition-colors">
+                            Connexion
+                        </a>
+                        <a href="pages/formateur/inscription.html"
+                            class="flex-1 px-4 py-2.5 bg-white hover:bg-indigo-50 text-indigo-600 border-2 border-indigo-600 rounded-xl font-bold text-sm text-center transition-colors">
+                            S'inscrire
+                        </a>
+                    </div>
                 </div>
-            </a>
+            </div>
 
-            <a href="pages/login-etudiant.html"
+            <div
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-purple-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-purple-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -231,12 +242,23 @@
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-3 group-hover:text-purple-600 transition-colors">
                         Étudiant</h3>
-                    <p class="text-gray-500 font-medium leading-relaxed">Accédez à des formations de qualité et obtenez
+                    <p class="text-gray-500 font-medium leading-relaxed mb-6">Accédez à des formations de qualité et
+                        obtenez
                         des certifications reconnues.</p>
+                    <div class="flex gap-3">
+                        <a href="pages/login-etudiant.html"
+                            class="flex-1 px-4 py-2.5 bg-purple-600 hover:bg-purple-700 text-white rounded-xl font-bold text-sm text-center transition-colors">
+                            Connexion
+                        </a>
+                        <a href="pages/etudiant/inscription.html"
+                            class="flex-1 px-4 py-2.5 bg-white hover:bg-purple-50 text-purple-600 border-2 border-purple-600 rounded-xl font-bold text-sm text-center transition-colors">
+                            S'inscrire
+                        </a>
+                    </div>
                 </div>
-            </a>
+            </div>
 
-            <a href="pages/login-parent.html"
+            <div
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-pink-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-pink-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -248,12 +270,22 @@
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-3 group-hover:text-pink-600 transition-colors">Parent
                     </h3>
-                    <p class="text-gray-500 font-medium leading-relaxed">Suivez les progrès de vos enfants et
+                    <p class="text-gray-500 font-medium leading-relaxed mb-6">Suivez les progrès de vos enfants et
                         communiquez avec leurs tuteurs.</p>
+                    <div class="flex gap-3">
+                        <a href="pages/login-parent.html"
+                            class="flex-1 px-4 py-2.5 bg-pink-600 hover:bg-pink-700 text-white rounded-xl font-bold text-sm text-center transition-colors">
+                            Connexion
+                        </a>
+                        <a href="pages/inscription-choix.html"
+                            class="flex-1 px-4 py-2.5 bg-white hover:bg-pink-50 text-pink-600 border-2 border-pink-600 rounded-xl font-bold text-sm text-center transition-colors">
+                            S'inscrire
+                        </a>
+                    </div>
                 </div>
-            </a>
+            </div>
 
-            <a href="pages/entreprise/choix-role.html"
+            <div
                 class="group glass-card p-8 rounded-[2rem] hover:bg-white hover:border-blue-100 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 text-left relative overflow-hidden">
                 <div
                     class="absolute top-0 right-0 w-32 h-32 bg-blue-50 rounded-bl-[100px] -mr-8 -mt-8 transition-transform group-hover:scale-150 z-0">
@@ -265,10 +297,21 @@
                     </div>
                     <h3 class="text-2xl font-bold text-gray-900 mb-3 group-hover:text-blue-600 transition-colors">
                         Entreprise</h3>
-                    <p class="text-gray-500 font-medium leading-relaxed">Formez vos équipes et recrutez les meilleurs
+                    <p class="text-gray-500 font-medium leading-relaxed mb-6">Formez vos équipes et recrutez les
+                        meilleurs
                         talents de demain.</p>
+                    <div class="flex gap-3">
+                        <a href="pages/entreprise/choix-role.html"
+                            class="flex-1 px-4 py-2.5 bg-blue-600 hover:bg-blue-700 text-white rounded-xl font-bold text-sm text-center transition-colors">
+                            Connexion
+                        </a>
+                        <a href="pages/inscription-choix.html"
+                            class="flex-1 px-4 py-2.5 bg-white hover:bg-blue-50 text-blue-600 border-2 border-blue-600 rounded-xl font-bold text-sm text-center transition-colors">
+                            S'inscrire
+                        </a>
+                    </div>
                 </div>
-            </a>
+            </div>
         </div>
     </section>
 
@@ -285,14 +328,14 @@
                 </div>
                 <!-- Categories Tabs -->
                 <div class="flex gap-3 bg-gray-100 p-1.5 rounded-xl self-start md:self-auto overflow-x-auto max-w-full">
-                    <button
-                        class="px-6 py-3 bg-white text-gray-900 rounded-lg font-bold shadow-sm hover:shadow-md transition-all whitespace-nowrap">Top
+                    <button id="filter-sales"
+                        class="px-6 py-3 bg-white text-gray-900 rounded-lg font-bold shadow-sm hover:shadow-md transition-all whitespace-nowrap filter-btn">Top
                         Ventes 🔥</button>
-                    <button
-                        class="px-6 py-3 text-gray-500 hover:bg-white/50 hover:text-gray-900 rounded-lg font-bold transition-all whitespace-nowrap">Les
+                    <button id="filter-rating"
+                        class="px-6 py-3 text-gray-500 hover:bg-white/50 hover:text-gray-900 rounded-lg font-bold transition-all whitespace-nowrap filter-btn">Les
                         Mieux Notés ⭐</button>
-                    <button
-                        class="px-6 py-3 text-gray-500 hover:bg-white/50 hover:text-gray-900 rounded-lg font-bold transition-all whitespace-nowrap">Nouveaux
+                    <button id="filter-new"
+                        class="px-6 py-3 text-gray-500 hover:bg-white/50 hover:text-gray-900 rounded-lg font-bold transition-all whitespace-nowrap filter-btn">Nouveaux
                         🆕</button>
                 </div>
             </div>
@@ -308,7 +351,7 @@
             </div>
 
             <div class="text-center mt-16">
-                <a href="pages/etudiant/catalogue.html"
+                <a href="pages/etudiant/acces-catalogue.html"
                     class="inline-flex items-center gap-2 text-indigo-600 font-bold hover:text-indigo-700 hover:underline transition-all text-lg">
                     Voir tous les formateurs <i data-lucide="arrow-right" class="w-5 h-5"></i>
                 </a>
