--- a/pages/entreprise/inscription.html
+++ b/pages/entreprise/inscription.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="relative z-10 animate-fade-in">
-            <button onclick="window.location.href='dashboard.html'"
+            <button onclick="window.location.href='dashboard-admin.html'"
                 class="flex items-center gap-2 text-white/80 hover:text-white transition-colors mb-8 group">
                 <div class="p-2 bg-white/10 rounded-lg group-hover:bg-white/20 transition-all">
                     <i data-lucide="arrow-left" class="w-5 h-5"></i>
