--- a/pages/formateur/inscription.html
+++ b/pages/formateur/inscription.html
@@ -145,25 +145,39 @@
         </div>
 
         <div class="login-card">
-            <form onsubmit="event.preventDefault(); window.location.href='dashboard.html';">
+            <form id="formateurInscriptionForm">
                 <div class="form-group">
                     <label class="form-label">Nom complet</label>
-                    <input type="text" class="form-input" placeholder="Votre nom" required>
+                    <input type="text" name="name" class="form-input" placeholder="Votre nom" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Spécialité</label>
-                    <input type="text" class="form-input" placeholder="Ex: Mathématiques, Piano..." required>
+                    <input type="text" name="specialite" class="form-input" placeholder="Ex: Mathématiques, Piano..."
+                        required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Adresse Email</label>
-                    <input type="email" class="form-input" placeholder="prof@email.com" required>
+                    <input type="email" name="email" class="form-input" placeholder="prof@email.com" required>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Numéro de téléphone</label>
+                    <input type="tel" name="phone" class="form-input" placeholder="Ex: 50 123 456" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Mot de passe</label>
-                    <input type="password" class="form-input" placeholder="••••••••" required>
+                    <input type="password" name="password" class="form-input" placeholder="••••••••" required>
+                </div>
+
+                <!-- CAPTCHA Section -->
+                <div class="form-group" id="captchaContainer">
+                    <label class="form-label">Vérification de sécurité</label>
+                    <p id="captchaQuestion" style="font-weight: 600; color: var(--purple-600); margin-bottom: 0.5rem;">
+                    </p>
+                    <input type="text" id="captchaInput" class="form-input" placeholder="Votre réponse" required>
                 </div>
 
                 <button type="submit" class="btn-submit">
@@ -176,6 +190,7 @@
     </div>
     <!-- Dynamic System Scripts -->
     <script src="../../js/core/data-manager.js"></script>
+    <script src="../../js/pages/formateur-inscription.js"></script>
 </body>
 
 </html>
