--- a/pages/login-formateur.html
+++ b/pages/login-formateur.html
@@ -236,8 +236,7 @@
                 <div class="form-group">
                     <label class="form-label">Adresse Email</label>
                     <div class="input-wrapper">
-                        <input type="email" class="form-input" id="email" placeholder="exemple@email.com"
-                            value="prof@eduspace.tn" required>
+                        <input type="email" class="form-input" id="email" placeholder="exemple@email.com" required>
                         <svg class="input-icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
@@ -249,8 +248,7 @@
                 <div class="form-group">
                     <label class="form-label">Mot de passe</label>
                     <div class="input-wrapper">
-                        <input type="password" class="form-input" id="password" placeholder="••••••••" value="123456"
-                            required>
+                        <input type="password" class="form-input" id="password" placeholder="••••••••" required>
                         <svg class="input-icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
                             <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
@@ -267,13 +265,6 @@
                     Se connecter
                 </button>
             </form>
-
-            <div class="test-credentials">
-                <p>Comptes de test:</p>
-                <div class="credentials">Indépendant:</div>
-                <div class="credentials">Email: prof@eduspace.tn</div>
-                <div class="credentials">Mot de passe: 123456</div>
-            </div>
         </div>
 
         <p class="footer-text">Besoin d'aide? Contactez l'administration</p>
@@ -286,7 +277,13 @@
         const errorMessage = document.getElementById('errorMessage');
         const errorText = document.getElementById('errorText');
 
-        form.addEventListener('submit', function (e) {
+        // Init DataManager
+        document.addEventListener('DOMContentLoaded', async () => {
+            if (!window.dataManager) await new Promise(r => setTimeout(r, 100)); // Wait if script loading
+            await window.dataManager.init();
+        });
+
+        form.addEventListener('submit', async function (e) {
             e.preventDefault();
 
             const email = document.getElementById('email').value;
@@ -296,33 +293,35 @@
             submitBtn.disabled = true;
             submitBtn.innerHTML = '<div class="spinner"></div> Connexion...';
 
-            setTimeout(function () {
-                if (password === '123456' && email === 'prof@eduspace.tn') {
-                    window.eduspace.utils.setStorage('user', {
-                        role: 'formateur',
-                        email: email,
-                        id: '100'
-                    });
-
-                    window.location.href = 'formateur/dashboard.html';
-                } else {
-                    errorText.textContent = 'Identifiants incorrects (Utilisez les comptes de test)';
-                    errorMessage.classList.add('show');
-
-                    submitBtn.disabled = false;
-                    submitBtn.innerHTML = `
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M23 7l-7 5 7 5V7z"/>
-                            <rect x="1" y="5" width="15" height="14" rx="2" ry="2"/>
-                        </svg>
-                        Se connecter
-                    `;
+            try {
+                if (!window.dataManager) {
+                    throw new Error("Erreur système: DataManager non chargé");
                 }
-            }, 500);
+
+                await dataManager.login(email, password, 'formateur');
+
+                // Redirection
+                window.location.href = 'formateur/dashboard.html';
+
+            } catch (err) {
+                console.error(err);
+                errorText.textContent = 'Identifiants incorrects';
+                errorMessage.classList.add('show');
+
+                submitBtn.disabled = false;
+                submitBtn.innerHTML = `
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M23 7l-7 5 7 5V7z"/>
+                        <rect x="1" y="5" width="15" height="14" rx="2" ry="2"/>
+                    </svg>
+                    Se connecter
+                `;
+            }
         });
     </script>
+
     <!-- Dynamic System Scripts -->
-    <script src="../../js/core/data-manager.js"></script>
+    <script src="../js/core/data-manager.js"></script>
 </body>
 
 </html>
