--- a/pages/parent/inscription.html
+++ b/pages/parent/inscription.html
@@ -159,6 +159,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-label">Numéro de téléphone</label>
+                    <input type="tel" class="form-input" placeholder="Ex: 50 123 456" required>
+                </div>
+
+                <div class="form-group">
                     <label class="form-label">Mot de passe</label>
                     <input type="password" class="form-input" placeholder="••••••••" required>
                 </div>
