--- a/pages/formateur/messages.html
+++ b/pages/formateur/messages.html
@@ -113,7 +113,7 @@
         <!-- Message Detail -->
         <div class="lg:col-span-2 bg-white rounded-2xl border border-gray-200 shadow-sm overflow-hidden flex flex-col"
           style="height: calc(100vh - 150px);">
-          <div id="message-detail-container" class="flex-1 flex items-center justify-center text-gray-400">
+          <div id="message-detail-container" class="flex-1 flex items-center justify-center text-gray-400 overflow-y-auto custom-scrollbar">
             <div class="text-center">
               <i data-lucide="mail-open" class="w-20 h-20 mx-auto mb-4 opacity-50"></i>
               <p class="text-lg font-medium">Sélectionnez un message</p>
